# QTdashboard

./: CMakeLists.txt  InfoPanel.qml  Main.qml  NavigationLine.qml  README.md  WingSpeedometer.qml  main.cpp
